--- a/app/index.html
+++ b/app/index.html
@@ -37,12 +37,12 @@
           <ul class="nav navbar-nav">
             <li class="active"><a ng-href="#">Home</a></li>
             <li><a ng-href="#" ng-click="Reset()">Reset</a></li>
-            <li><a ng-href="#">View</a></li>
+            <li><a href="http://github.com/jromerog/mywallet" target="_blank">View source</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </nav>
 
-      <div ng-include="'views/main.html'" ></div>
+      <div ng-include="'views/main.html'"></div>
 
       <div class="footer">
         <p><span class="glyphicon glyphicon-heart"></span> Front-end Developer Test</p>
@@ -69,9 +69,9 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/form.js"></script>
         <script src="scripts/directives.js"></script>
+        <script src="scripts/controllers/form.js"></script>
+        <script src="scripts/controllers/main.js"></script>
         <!-- endbuild -->
 </body>
 </html>
